# omniumcore-launcher

.github/workflows/: build.yml
OmniumCoreLauncher/: CMakeLists.txt  README.md
OmniumCoreLauncher/assets/icons/: README.txt
OmniumCoreLauncher/assets/sounds/: README.txt
OmniumCoreLauncher/resources/: resources.qrc
OmniumCoreLauncher/resources/styles/: midnight.qss
OmniumCoreLauncher/src/: ApiClient.cpp  ApiClient.h  AssetPaths.cpp  AssetPaths.h  FlowLayout.cpp  FlowLayout.h  GameCard.cpp  GameCard.h  GameDetailsDialog.cpp  GameDetailsDialog.h  GameDetailsView.cpp  GameDetailsView.h  GameScanner.cpp  GameScanner.h  MainWindow.cpp  MainWindow.h  PlatformIcons.cpp  PlatformIcons.h  SoundManager.cpp  SoundManager.h  Updater.cpp  Updater.h  main.cpp
OmniumCoreLauncher/src/models/: Game.h
